--- a/src/Pages/Home/Featured/Featured.css
+++ b/src/Pages/Home/Featured/Featured.css
@@ -1,6 +1,5 @@
 .featured-item {
-    background-image: url('../../../assets/home/featured.jpg');
-    background-size: cover;
-    background-position: center;
-  }
-  
+  background-image: url("../../../assets//home/featured.jpg");
+  background-size: cover;
+  background-position: center;
+}
